# ebook-transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
ebook_transcriber/: __init__.py  cli.py  config.py  figure_crops.py  llm_client.py  llm_crop.py  markdown_translator.py  markdown_writer.py  pdf_reader.py  pipeline.py  prompts.py  segments.py
tests/: test_figure_crops.py  test_llm_crop.py  test_markdown_translator.py  test_markdown_writer.py  test_page_ranges.py  test_pdf_reader.py  test_segments.py
